# dijkstralog

./: .gitignore  Cargo.toml  INDEX  README.md  TODO.md  alltogethernow.py  datalog.py  iters-minimised.hs  iters.hs  iters.jl  iters_alltogethernow.hs  iters_alltogethernow_minimal.hs  iters_atend.hs  iters_bounded.hs  iters_bounded2.hs  iters_bounded3.hs  iters_bounded_simple.hs  iters_done.hs  iters_innerouter.hs  iters_innerouter_golfed.hs  iters_leapfrog.hs  iters_leapfrog_minimal.hs  iters_leapfrog_range.hs  iters_magic_nonworking.hs  iters_tristate.hs  iters_weak.hs  lftj.py  minexample.hs  plan.rkt  search_applicative.hs
examples/: basic.rs  congress_network.rs  gallop.rs  graspan.rs  graspan2.rs  livejournal-binary.rs  livejournal-fast.rs  livejournal.rs  macros.rs  min_reachable.rs  trans.rs  trans2.rs  trans2_parallel.rs  trans3.rs  trans_hash.rs  trans_rev.rs  trans_rev2.rs  triangle-fast.rs  triangle.rs  triangle_extension.rs
macros/: Cargo.toml
macros/src/: lib.rs
minikanren2025/: Makefile  bump-1.rs  fairness-notes.org  logict.hs  naive-leapfrog.hs  on-fairness.bib  on-fairness.tex  optimization-notes.org  seek-1.rs  seek-2.rs  seek-3.rs  seek-4.rs  seek-5.rs  seek-6.rs  seek-7.rs  seek-minimal.rs  seek-optimized-1.hs  seek-optimized-2.hs  seek-optimized-3.hs  seek-optimized2-1.hs  seek-optimized2-2.hs  seek-specialized-1.hs  seek-specialized-2.hs  seek-specialized-3.hs  seek.hs  seek2-1.rs  seek2-2.rs  seek2-3.rs  streams.hs  temp.hs
src/: example.rs  iter.rs  iters.rs  lftj.rs  lftj_old.rs  lib.rs  lsm.rs  macros.rs  main.rs  main_old.rs  search.rs  (+5 more)
