[package]
name = "dijkstralog-macros"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
# copied from https://github.com/mwillsey/promatch/blob/main/promatch-macros/Cargo.toml
derive-syn-parse = "0.2"
proc-macro2 = "1"
syn = {version = "2", features = ["extra-traits", "full"]}
quote = "1"
